Removed CSS z-index property and stopped modal plugin from changing zindex property directly.
Modal plugin now uses a base zIndex of 16000 by default i.e. 1000 more than the default
zIndex for normal qTips, rather than decrementing the base zIndex of normal qTips.

--- a/src/core.css
+++ b/src/core.css
@@ -10,8 +10,6 @@
 	
 	font-size: 10.5px;
 	line-height: 12px;
-
-	z-index: 15000;
 }
 
 	/* Fluid class for determining actual width in IE */
